# audiobook-boss

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test_compilation.rs  test_cover_art.md  test_debug.js  test_fix.js  test_metadata_fix.sh  test_sample_rate_fix.js  test_sample_rate_fix.rs
.claude/: settings.local.json
docs/: audit_report_comprehensive.md  code_review_report.md  (+5 more)
src-tauri/: CLIPPY_CLEANUP_PLAN.md  Cargo.toml  UPDATED_FUNCTION_DEPENDENCY_MAP.md  tauri.conf.json
src-tauri/binaries/: .gitignore  download-ffmpeg.sh
src-tauri/docs/reports/: ast-grep-setup-and-usage.md
src-tauri/scripts/: advanced_migration_analysis.sh  analyze_ffmpeg_migration.sh  validate_migration_progress.sh
src-tauri/src/: errors.rs  lib.rs  main.rs  tests_integration.rs
src-tauri/src/audio/: cleanup.rs  constants.rs  context.rs  file_list.rs  media_pipeline.rs  metrics.rs  mod.rs  processor.rs  progress.rs  progress_monitor.rs  session.rs  settings.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ffmpeg/: command.rs  mod.rs
src-tauri/src/metadata/: mod.rs  reader.rs  writer.rs
src-tauri/tests/audio/: processor_tests.rs
src-tauri/tests/unit/audio/: cleanup_tests.rs  ffmpegnext_tests.rs  metrics_tests.rs  processor_tests.rs  session_tests.rs
src-tauri/tests/unit/commands/: audio_commands_tests.rs  basic_commands_tests.rs  metadata_commands_tests.rs
src-tauri/tests/unit/core/: errors_tests.rs
src-tauri/tests/unit/ffmpeg/: ffmpeg_mod_tests.rs
src-tauri/tests/unit/metadata/: reader_tests.rs  writer_tests.rs
(+66 files in other folders)
