[package]
name = "audiobook-boss"
version = "0.1.0"
description = "A Tauri App"
authors = ["JStar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audiobook_boss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.20.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
which = "6.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
ffmpeg-next = { version = "7", optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Type-safe FFmpeg engine based on ffmpeg-next (disabled by default)
safe-ffmpeg = ["dep:ffmpeg-next"]

[dev-dependencies]
tempfile = "3.20.0"
